[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_label.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/spacer.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffolder/src/gui/screens/confirm_data_deletion_screen_with_analytics.gd" type="Script" id=3]
[ext_resource path="res://addons/scaffolder/assets/fonts/pxlzr_font_s.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_texture_rect.tscn" type="PackedScene" id=7]

[node name="ConfirmDataDeletionScreenWithAnalytics" type="VBoxContainer"]
rect_min_size = Vector2( 1024, 768 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
screen_name = "confirm_data_deletion"
nav_bar_text = "Are you sure?"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlertIcon" parent="VBoxContainer" instance=ExtResource( 7 )]
margin_left = 480.0
margin_right = 544.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_key = "alert_normal"
texture_scale = Vector2( 4, 4 )

[node name="Spacer" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_top = 64.0
margin_right = 512.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 20 )
size = Vector2( 0, 20 )

[node name="Label" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 1024.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 4 )
text = "This will both erase all game progress on this device and send a request to have your analytics usage data erased from our remote servers as well."
valign = 0
autowrap = true
font_size = "S"

[node name="Spacer2" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_top = 133.0
margin_right = 512.0
margin_bottom = 153.0
rect_min_size = Vector2( 0, 20 )
size = Vector2( 0, 20 )

[node name="Label2" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 153.0
margin_right = 1024.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 4 )
text = "IMPORTANT: Record your client ID number (taking a screenshot might be easiest). In case there's a problem with your request, we'll need this number to know which data to delete. After you click the confirmation button below, you will not be able to retrieve this number. Here is your client ID number:"
valign = 0
autowrap = true
font_size = "S"

[node name="Spacer9" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_top = 228.0
margin_right = 512.0
margin_bottom = 248.0
rect_min_size = Vector2( 0, 20 )
size = Vector2( 0, 20 )

[node name="ClientIdNumber" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 248.0
margin_right = 1024.0
margin_bottom = 271.0
custom_fonts/font = ExtResource( 4 )
text = "7e47e726-d05f-4002-a045-60f7cb85b6f9"
valign = 0
autowrap = true
font_size = "S"

[node name="Spacer10" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_top = 271.0
margin_right = 512.0
margin_bottom = 291.0
rect_min_size = Vector2( 0, 20 )
size = Vector2( 0, 20 )

[node name="ConfirmButton" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_left = 362.0
margin_top = 291.0
margin_right = 662.0
margin_bottom = 371.0
rect_min_size = Vector2( 300, 80 )
label = "I'm sure.
Please delete all my data."
font_size = "S"
size_override = Vector2( 300, 80 )

[node name="Spacer11" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_top = 371.0
margin_right = 512.0
margin_bottom = 381.0
rect_min_size = Vector2( 0, 10 )
size = Vector2( 0, 10 )

[node name="CancelButton" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_left = 312.0
margin_top = 381.0
margin_right = 712.0
margin_bottom = 501.0
rect_min_size = Vector2( 400, 120 )
label = "Cancel!"
is_shiny = true
font_size = "Xl"
size_override = Vector2( 400, 120 )

[node name="Spacer12" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_top = 501.0
margin_right = 512.0
margin_bottom = 551.0
rect_min_size = Vector2( 0, 50 )
size = Vector2( 0, 50 )

[connection signal="pressed" from="VBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
